--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,18 @@
 
         <version.microprofile-ext>1.0.5</version.microprofile-ext>
 
-        <version.apache_commons-lang>3.6</version.apache_commons-lang>
+        <version.apache_commons-lang>3.10</version.apache_commons-lang>
 
         <version.slf4j>1.7.30</version.slf4j>
 
-        <version.assertj>3.13.0</version.assertj>
-        <version.mockito>3.0.0</version.mockito>
+        <version.junit5>5.6.2</version.junit5>
+        <version.assertj>3.16.1</version.assertj>
+        <version.mockito>3.3.3</version.mockito>
 
-        <version.testcontainers>1.12.5</version.testcontainers>
-        <version.cucumber>4.8.0</version.cucumber>
-        <version.rest-assured>4.0.0</version.rest-assured>
-        <version.hamcrest>2.1</version.hamcrest>
+        <version.testcontainers>1.14.3</version.testcontainers>
+        <version.cucumber>6.2.0</version.cucumber>
+        <version.rest-assured>4.3.1</version.rest-assured>
+        <version.hamcrest>2.2</version.hamcrest>
 
         <version.jacoco>0.8.5</version.jacoco>
 
@@ -314,6 +315,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${version.junit5}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${version.assertj}</version>
@@ -347,7 +354,7 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java8</artifactId>
+            <artifactId>cucumber-java</artifactId>
             <version>${version.cucumber}</version>
             <scope>test</scope>
         </dependency>
